# api_tests_for_beer_rule

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
